# auto-drone

./: .gitignore  README.md
controller/: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-controller  bazel-out  bazel-testlogs  main.cpp
controller/position_controller/: BUILD.bazel  pid.cpp
controller/position_manager/: BUILD.bazel  pid_controller.cpp  pid_controller.hpp
docker/: controller.Dockerfile  docker-compose.yaml  gz-sim.Dockerfile
simulation/models/drone/: model.config  model.sdf
simulation/models/ground_plane/: model.config  model.sdf
simulation/worlds/: teleop_world.sdf  world.sdf
