cc_binary(
    name = "controller",
    srcs = ["main.cpp"],
    deps = [
        "//third_party/gazebo:gz_transport",
        "//third_party/gazebo:gz_msgs",
        "//third_party/gazebo:gz_utils",
        "//pid_controller:pid_controller"
    ],
    copts = [
        "-std=c++17",
        "-I/usr/include/gz/transport14",
        "-I/usr/include/gz/msgs11",
        "-I/usr/include/gz/utils3",
        ],
    linkopts = [
        "-lzmq",
    ],
)